# CPP-QML_test_task

./: CMakeLists.txt  README.md  qml.qrc
src/: main.cpp
src/UI/: Intro.qml  LoginPage.qml  MainPage.qml  ScreenList.qml
